--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <header>
 
-    <a href="">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
 
     <nav>
       <ul>
-        <li><a href="./index.html">Studio</a></li>
+        <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contacts</a></li>
       </ul>
@@ -62,23 +62,23 @@
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img src="./images/img.jpg" alt="Mark Guerrero" width="320">
+          <img src="./images/img.jpg" alt="Mark Guerrero" width="264">
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
 
         <li>
-          <img src="./images/Team_Card_2.jpg" alt="Tom Ford" width="320">
+          <img src="./images/Team_Card_2.jpg" alt="Tom Ford" width="264">
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img src="./images/Team_Card_3.jpg" alt="Camila Garcia" width="320">
+          <img src="./images/Team_Card_3.jpg" alt="Camila Garcia" width="264">
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img src="./images/Team_Card_4.jpg" alt="Daniel Wilson" width="320">
+          <img src="./images/Team_Card_4.jpg" alt="Daniel Wilson" width="264">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
@@ -86,7 +86,7 @@
     </section>
   </main>
   <footer>
-    <a href="">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
   </footer>
